ingress_templates/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: frontend-ingress
 annotations:
   cert-manager.io/cluster-issuer: lets-encrypt
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 tls:
 - hosts:
   - <domain>
   secretName: frontend-ingress-tls
 rules:
 - host: <domain>
   http:
     paths:
     - backend:
         service:
           name: frontend-service
           port:
             number: 3000
       path: /
       pathType: Prefix
